--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=SpringBootPostmanPagingSortingOnetoOneMapExam2
+
+spring.datasource.url=jdbc:mysql://localhost:3306/one_one3
+spring.datasource.username=root
+spring.datasource.password=Nashik@15
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+server.port=8085
